@@ -115,6 +115,9 @@ INSP.NAME.wildcards.confusing.name.with.dot.message=Confusing wildcard name: ''{
 INSP.NAME.redundant.comma.title=Comma is unnecessary
 INSP.NAME.redundant.comma.fix.message=Remove redundant comma
 
+# SmkCorrectUsingMethodsInspection
+INSP.NAME.correct.use.method.title=''{0}'' doesn''t make sense in ''{1}''
+
 # SmkPyUnboundLocalVariableInspection
 INSP.NAME.unbound=Unbound local variable
 
